--- a/config/locales/en-US_fat_free_crm.yml
+++ b/config/locales/en-US_fat_free_crm.yml
@@ -465,6 +465,7 @@ en-US:
   reject: Reject
   reject_lead_confirm: Are you sure you want to reject this lead?
   save_lead: Save Lead
+  save_order: Save Order
   source: Source
   status: Status
   total_leads: Total Leads
