--- a/config/locales/en-US_fat_free_crm.yml
+++ b/config/locales/en-US_fat_free_crm.yml
@@ -140,6 +140,10 @@ en-US:
               missing_last_name: ^Please specify last name.
             access:
               share_lead: ^Please specify users to share the lead with.
+        order:
+          attributes:
+            state_of_incorporate:
+              missing_state_of_incorporate: ^Please specify State of Incorporate
         opportunity:
           attributes:
             name:
@@ -614,6 +618,7 @@ en-US:
   edit_note: Edit Note
   added_ago: added %{value}
   added_by: added %{time_ago} by %{user}
+  for_the_state_of: for the state of %{state}
   back: Back
   cancel: Cancel
   close_form: Close form
