crm email finished

--- a/config/locales/en-US_fat_free_crm.yml
+++ b/config/locales/en-US_fat_free_crm.yml
@@ -33,6 +33,7 @@ en-US:
   admin_tab_tags: Tags
   admin_tab_settings: Settings
   admin_tab_business_rules: Business Rules
+  admin_tab_dropdown_options: Dropdown Options
   admin_tab_plugins: Plugins
   affiliate: Affiliate
   competitor: Competitor
